# poco

./: .clineignore  .gitignore  Dockerfile  Procfile  README.md  azure-blob-storage-guide.md  azure-service-bus-commands.md  azure-update-guide.md  example.py  guide_for_frontend.md  langgraph.json  poco-worker.Dockerfile  pyproject.toml  redis-lock-azure-guide.md  req.txt  requirements-dev.txt  requirements.txt
examples/: chat_router_example.py  conversation_manager_example.py  conversation_router_example.py  dataset_manager_example.py  document_store_demo.py  graph_example.py  whatsapp_integration_example.py
scripts/: load_test_data.py
src/: __init__.py  config.py  constants.py  database_connector.py  graph.py  main.py  print_event.py  run.py  run_api.py  run_whatsapp_worker.py  settings.py  state.py  utils.py
src/agent/: assistant.py  workflow.py
src/agents/: __init__.py  action_agent.py  assistant.py  base_agents.py  collection_router.py  document_router.py  exceptions.py  graph.py  print_event.py  query_processor.py  state.py  workflow.py
src/api/: config.py  dependencies.py  main.py  models.py
src/conversation_store/: conversation_manager.py  exceptions.py
src/database/: collection.py  connection.py  database.py  document.py  manager.py  query.py  schema_field.py
src/database_manager/: __init__.py  collection.py  collection_definition.py  collection_operations.py  collection_registry.py  connection.py  database.py  document.py  document_db.py  document_operations.py  embedding_wrapper.py  exceptions.py  query.py  schema_field.py
src/document_store/: __init__.py  dataset_manager.py  exceptions.py  manager.py  models.py  pipeline.py  (+2 more)
tests/: __init__.py  test_document_db.py  test_tools.py
(+146 files in other folders)
