[project]
name = "poco"
version = "0.1.0"
description = "Poco Project"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 160
target-version = ['py313']
src = ["src", "tests"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
